@@ -8,6 +8,8 @@ Added sorting icons for money table
 Fixed money table colours
 Removed {table_declare} from money table views
 Adding index bits to search view
+Added feedback links for search section
+Updated styles and font sizes for data descriptions
 
 
 Development Portal (2016-11-08 shi)
